[gd_scene load_steps=2 format=2]

[ext_resource path="res://Enemies/EnemyStat.gd" type="Script" id=1]

[node name="EnemyStat" type="Node"]
script = ExtResource( 1 )

[node name="InvisibleTime" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="FlashTime" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="InvisibleTime" to="." method="_on_InvisibleTime_timeout"]
[connection signal="timeout" from="FlashTime" to="." method="_on_FlashTime_timeout"]
